# modules/apps/headless/headless-object/headless-object-impl/rest-openapi.yaml
@@ -62,6 +62,15 @@ components:
                 -   actionIds
                 -   type
             type: object
+        ObjectEntryCMSBulkAction:
+            description:
+                Represents a list of batch engines jobs
+            properties:
+                ids:
+                    items:
+                        format: int64
+                        type: integer
+                    type: array
         ObjectEntryFolder:
             description:
                 Represents a object entry folder that contains objects entries and other object entry folders.
@@ -201,6 +210,44 @@ info:
     version: v1.0
 openapi: 3.0.1
 paths:
+    "/object-entry-cms-bulk-action/{bulkActionName}":
+        post:
+            description:
+                Execute the object entries bulk action.
+            operationId: postObjectEntryCMSBulkAction
+            parameters:
+                -   in: path
+                    name: bulkActionName
+                    required: true
+                    schema:
+                        type: string
+                -   in: query
+                    name: entryIds
+                    required: false
+                    schema:
+                        items:
+                            type: string
+                        type: array
+                -   in: query
+                    name: filter
+                    required: false
+                    schema:
+                        type: string
+                -   in: query
+                    name: search
+                    required: false
+                    schema:
+                        type: string
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ObjectEntryCMSBulkAction"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/ObjectEntryCMSBulkAction"
+            tags: ["ObjectEntryCMSBulkAction"]
     "/object-entry-folders/{objectEntryFolderId}":
         delete:
             description:
